syntax = "proto3";
package auth;
option go_package = "./internal/pb";

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}

message SignUpRequest {
  string phoneNumber = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string dateOfBirth = 5;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}